syntax = "proto3";

package vega;

option go_package = "code.vegaprotocol.io/vega/protos/vega";

// Vega representation of an external asset
message Asset {
  enum Status {
    // Default value, always invalid
    STATUS_UNSPECIFIED = 0;
    // Asset is proposed and under vote
    STATUS_PROPOSED = 1;
    // Asset has been rejected from governance
    STATUS_REJECTED = 2;
    // Asset is pending listing from the bridge
    STATUS_PENDING_LISTING = 3;
    // Asset is fully usable in the network
    STATUS_ENABLED = 4;
  }

  // Internal identifier of the asset.
  string id = 1;
  // Definition of the external source for this asset.
  AssetDetails details = 2;
  // Status of the asset.
  Status status = 3;
}

// Vega representation of an external asset
message AssetDetails {
  reserved 3;

  // Name of the asset (e.g: Great British Pound).
  string name = 1;
  // Symbol of the asset (e.g: GBP).
  string symbol = 2;
  // Number of decimal / precision handled by this asset.
  uint64 decimals = 4;
  // Minimum economically meaningful amount in the asset.
  string quantum = 5;

  // Source of the asset
  oneof source {
    // Vega built-in asset.
    BuiltinAsset builtin_asset = 101;
    // Ethereum ERC20 asset.
    ERC20 erc20 = 102;
  }
}

// Vega internal asset
message BuiltinAsset {
  // Maximum amount that can be requested by a party through the built-in asset faucet at a time.
  string max_faucet_amount_mint = 1;
}

// ERC20 token based asset, living on the ethereum network
message ERC20 {
  // Address of the contract for the token, on the ethereum network.
  string contract_address = 1;
  // Lifetime limits deposit per address
  // note: this is a temporary measure that can be changed by governance.
  string lifetime_limit = 2;
  // Maximum you can withdraw instantly. All withdrawals over the threshold will be delayed by the withdrawal delay.
  // There’s no limit on the size of a withdrawal
  // note: this is a temporary measure that can be changed by governance.
  string withdraw_threshold = 3;
  // Chain ID the asset originated from.
  string chain_id = 4;
}

// Changes to apply on an existing asset.
message AssetDetailsUpdate {
  reserved 1, 2, 3, 4;
  // Minimum economically meaningful amount in the asset.
  string quantum = 5;

  // Source of the asset update
  oneof source {
    // Ethereum ERC20 asset update.
    ERC20Update erc20 = 101;
  }
}

message ERC20Update {
  // Lifetime limits deposit per address.
  // This will be interpreted against the asset decimals.
  // note: this is a temporary measure that can be changed by governance.
  string lifetime_limit = 1;
  // Maximum you can withdraw instantly. All withdrawals over the threshold will be delayed by the withdrawal delay.
  // There’s no limit on the size of a withdrawal
  // note: this is a temporary measure that can be changed by governance.
  string withdraw_threshold = 2;
}
